<resources>
    <string name="app_name">CadList</string>
    <string name="btnCadastro">Cadastramento</string>
    <string name="btnLista">Lista</string>
    <string name="btnCadCategoria">Cadastro de Categoria</string>
    <string name="btnCadProduto">Cadastramento de Produto</string>
    <string name="btnAddFoto">Add</string>
    <string name="btnCadastrarProduto">Cadastrar Produto</string>
    <string name="selecionarCategoria">Selecione uma Categoria</string>
    <string name="NomeProduto" />
    <string name="QtdProduto" />
    <string name="precoDoProduto" />
    <string name="catview">Nome da Categoria</string>
    <string name="btnCadastroCategoria">Cadastrar Categoria</string>
    <string name="edtNomeCategoria" />
    <string name="nome_do_produto">Nome do Produto</string>
    <string name="todo">TODO</string>
    <string name="quantidade">Quantidade</string>
    <string name="pre_o_ex_r_5_00">Preço,Ex:R$5,00</string>
    <string name="btnListCategoria">Listar Categorias</string>
    <string name="btnProcurarProduto">Procurar Produto</string>
    <string name="btnCadastroCliente">Cadastrar Cliente</string>
    <string name="btnCadastrarVeiculo">Cadastrar veiculo</string>
    <string name="edtNomeCliente" />
    <string name="edtEmail" />
    <string name="edtTelefone" />
    <string name="edtDataNascimento" />
    <string name="btnCadCliente">Cadastrar</string>
    <string name="edtPlacaCarro" />
    <string name="edtTipoDeVeiculo" />
    <string name="textSelecioneCliente" />
    <string name="btnCadVeiculo">Cadastrar Veiculo</string>
</resources>
