<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadProduto"
    tools:layout_editor_absoluteY="81dp"
    tools:ignore="ExtraText">

    <EditText
        android:id="@+id/nome_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/nome_do_produto"
        android:inputType="textPersonName"
        android:text="@string/NomeProduto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/qtd_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/quantidade"
        android:inputType="number"
        android:text="@string/QtdProduto"
        app:layout_constraintEnd_toEndOf="@+id/nome_produto"
        app:layout_constraintStart_toStartOf="@+id/nome_produto"
        app:layout_constraintTop_toBottomOf="@+id/nome_produto" />

    <EditText
        android:id="@+id/preco_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/pre_o_ex_r_5_00"
        android:inputType="numberDecimal"
        android:text="@string/precoDoProduto"
        app:layout_constraintEnd_toEndOf="@+id/qtd_produto"
        app:layout_constraintStart_toStartOf="@+id/qtd_produto"
        app:layout_constraintTop_toBottomOf="@+id/qtd_produto" />

    <Button
        android:id="@+id/btn_CadastrarProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/btnCadastrarProduto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="btnCadastro"/>

    <TextView
        android:id="@+id/selecionar_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/selecionarCategoria"
        app:layout_constraintEnd_toEndOf="@+id/preco_produto"
        app:layout_constraintStart_toStartOf="@+id/preco_produto"
        app:layout_constraintTop_toBottomOf="@+id/preco_produto" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selecionar_categoria" />

</android.support.constraint.ConstraintLayout>