<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadCliente">

    <EditText
        android:id="@+id/edt_nomeCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="Nome"
        android:inputType="textPersonName"
        android:text="@string/edtNomeCliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:text="@string/edtEmail"
        app:layout_constraintStart_toStartOf="@+id/edt_nomeCliente"
        app:layout_constraintTop_toBottomOf="@+id/edt_nomeCliente" />

    <EditText
        android:id="@+id/edt_Telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Telefone"
        android:inputType="phone"
        android:text="@string/edtTelefone"
        app:layout_constraintEnd_toEndOf="@+id/edt_email"
        app:layout_constraintStart_toStartOf="@+id/edt_email"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <EditText
        android:id="@+id/edt_DataNascimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Data de Nascimento"
        android:inputType="date"
        android:text="@string/edtDataNascimento"
        app:layout_constraintEnd_toEndOf="@+id/edt_Telefone"
        app:layout_constraintStart_toStartOf="@+id/edt_Telefone"
        app:layout_constraintTop_toBottomOf="@+id/edt_Telefone" />

    <Button
        android:id="@+id/btn_CadCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/btnCadCliente"
        app:layout_constraintEnd_toEndOf="@+id/edt_DataNascimento"
        app:layout_constraintStart_toStartOf="@+id/edt_DataNascimento"
        app:layout_constraintTop_toBottomOf="@+id/edt_DataNascimento" />
</android.support.constraint.ConstraintLayout>