<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastro"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/btn_cadCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="btnCadastroCategoria"
        android:text="@string/btnCadCategoria"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/btn_cadProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="btnCadastroProduto"
        android:text="@string/btnCadProduto"
        app:layout_constraintEnd_toEndOf="@+id/btn_cadCategoria"
        app:layout_constraintStart_toStartOf="@+id/btn_cadCategoria"
        app:layout_constraintTop_toBottomOf="@+id/btn_cadCategoria" />

    <Button
        android:id="@+id/btn_CadastroCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btnCadastroCliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/btnCadastrarVeiculo"
        app:layout_constraintEnd_toEndOf="@+id/btn_CadastroCliente"
        app:layout_constraintStart_toStartOf="@+id/btn_CadastroCliente"
        app:layout_constraintTop_toBottomOf="@+id/btn_CadastroCliente" />
</android.support.constraint.ConstraintLayout>