<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadVeiculo">

    <EditText
        android:id="@+id/edt_PlacaCarro"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="Placa Do Veículo"
        android:inputType="textPersonName"
        android:text="@string/edtPlacaCarro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_TipoDeVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="Tipo de Veiculo"
        android:inputType="textPersonName"
        android:text="@string/edtTipoDeVeiculo"
        app:layout_constraintEnd_toEndOf="@+id/edt_PlacaCarro"
        app:layout_constraintStart_toStartOf="@+id/edt_PlacaCarro"
        app:layout_constraintTop_toBottomOf="@+id/edt_PlacaCarro" />

    <EditText
        android:id="@+id/edt_Ano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="Ano Do Veículo"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/edt_TipoDeVeiculo"
        app:layout_constraintStart_toStartOf="@+id/edt_TipoDeVeiculo"
        app:layout_constraintTop_toBottomOf="@+id/edt_TipoDeVeiculo" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_Ano" />

    <TextView
        android:id="@+id/TextSelecioneCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/textSelecioneCliente"
        app:layout_constraintBottom_toTopOf="@+id/spinner2"
        app:layout_constraintStart_toStartOf="@+id/spinner2"
        tools:text="Selecione o CLiente" />

    <Button
        android:id="@+id/btn_CadVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/btnCadVeiculo"
        app:layout_constraintEnd_toEndOf="@+id/spinner2"
        app:layout_constraintStart_toStartOf="@+id/spinner2"
        app:layout_constraintTop_toBottomOf="@+id/spinner2" />

</android.support.constraint.ConstraintLayout>