<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadCategoria"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/btn_cadastratCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/btnCadastroCategoria"
        app:layout_constraintEnd_toEndOf="@+id/edt_nomecategoria"
        app:layout_constraintStart_toStartOf="@+id/edt_nomecategoria"
        app:layout_constraintTop_toBottomOf="@+id/edt_nomecategoria"
        android:onClick="btnCadastroCategoria"/>

    <EditText
        android:id="@+id/edt_nomecategoria"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="Nome"
        android:inputType="textPersonName"
        android:text="@string/edtNomeCategoria"
        app:layout_constraintEnd_toEndOf="@+id/nome_categoria"
        app:layout_constraintStart_toStartOf="@+id/nome_categoria"
        app:layout_constraintTop_toBottomOf="@+id/nome_categoria" />

    <TextView
        android:id="@+id/nome_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/catview"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listV_dados"
        android:layout_width="368dp"
        android:layout_height="281dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cadastratCategoria" />

</android.support.constraint.ConstraintLayout>